Fixing Expand/Collapse form engine for view mode

--- a/src/main/webapp/default-site/static-assets/themes/cstudioTheme/css/forms-default.css
+++ b/src/main/webapp/default-site/static-assets/themes/cstudioTheme/css/forms-default.css
@@ -297,6 +297,10 @@ div.yui-calcontainer.cstudio-form-field-calendar {
     height: 26px;
 }
 
+.collapseForm{
+    z-index: 99999999;
+}
+
 .collapseForm .btn-primary{
     background-color: #E0E0E0;
     color: #000;
